--- a/src/main/resources/META-INF/resources/assets/css/stylle.css
+++ b/src/main/resources/META-INF/resources/assets/css/stylle.css
@@ -114,3 +114,8 @@ body .ui-menu .ui-menu-list .ui-menuitem .ui-menuitem-link .ui-menuitem-icon {
 .columnaEspacio {
     padding-right: 10px;
 }
+
+.ui-inputfield.ui-widget.ui-state-default.ui-corner-all.hasDatepicker {
+    width: 100% !important;
+    box-sizing: border-box; /* Asegura que el padding y el borde estén incluidos en el ancho */
+}
