--- a/src/main/resources/META-INF/resources/templates/templateMenu.xhtml
+++ b/src/main/resources/META-INF/resources/templates/templateMenu.xhtml
@@ -45,14 +45,14 @@
                             <img src="/assets/image/user.png"
                                  alt="Usuario"
                                  style="width: 30px; height: 30px; border-radius: 50%; border: 2px solid #007ad9;" />
-                            <span style="font-weight: bold; color: #333; margin-top: 5px;">#{userSessionBean.usuario.empleado.persona.nombreApellido}</span>
+                            <span style="font-weight: bold; color: #333; margin-top: 5px;opacity: 0.7;">#{userSessionBean.usuario.empleado.persona.nombreApellido}</span>
                         </div>
 
                         <!-- Botón de cerrar sesión -->
                         <p:link href="#{request.contextPath}/logout" icon="pi pi-power-off" style="display: flex; align-items: center;">
                             <img src="/assets/image/cerrar.png"
                                  alt="Cerrar Sesión"
-                                 style="width: 35px; height: 35px; vertical-align: middle;filter: brightness(50%);opacity: 0.6;" />
+                                 style="width: 35px; height: 35px; vertical-align: middle;filter: brightness(50%);opacity: 0.5;" />
                         </p:link>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                 <p:linkButton outcome="/home.xhtml" style="padding: 0; border: none; background: none;">
                     <img src="/assets/image/hogar.png"
                          alt="PS"
-                         style="width: 30px; height: 30px;filter: brightness(50%);opacity: 0.6;" />
+                         style="width: 30px; height: 30px;filter: brightness(50%);opacity: 0.5;" />
                 </p:linkButton>
 
                 <p:menu model="#{userSessionBean.menuModulosAcceos}"
